[package]
name = "odis-signer"
edition.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
axum = "0.8"
base64 = "0.22"
bincode = "1"
dotenvy = "0.15"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
threshold-bls = { git = "https://github.com/celo-org/celo-threshold-bls-rs", package = "threshold-bls" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rand_chacha = "0.2"
rand_core = "0.5"
