[package]
name = "odis-signer"
edition.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
alloy = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bincode = "1"
dotenvy = "0.15"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
threshold-bls = { git = "https://github.com/celo-org/celo-threshold-bls-rs", package = "threshold-bls" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["catch-panic", "limit", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
rand_chacha = "0.2"
rand_core = "0.5"
