[package]
name = "odis-signer"
edition.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
alloy = { version = "1", features = ["contract", "k256", "provider-http", "rpc-types", "sol-types"] }
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bincode = "1"
dotenvy = "0.15"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
moka = { version = "0.12", features = ["future"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
threshold-bls = { git = "https://github.com/celo-org/celo-threshold-bls-rs", package = "threshold-bls" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["catch-panic", "limit", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
alloy-signer = "1"
alloy-signer-local = "1"
http-body-util = "0.1"
rand_chacha = "0.2"
rand_core = "0.5"
tempfile = "3"
